src/test/deca/context/invalid/extension/select_with_not_int.deca
// The index of selection has to be an integer
// Description : try to select an element in an array with an not integer value;
// Result : error line 7;

{
    int[] x;
    println(x[1.2]);
}